@@ -16,8 +16,8 @@ CREATE TABLE `activite`
 	`libelle` VARCHAR(255)  NOT NULL,
 	`actif` TINYINT default 1,
 	`association_id` INTEGER  NOT NULL,
-	`enregistre_par` INTEGER  NOT NULL,
-	`mis_a_jour_par` INTEGER  NOT NULL,
+	`enregistre_par` INTEGER,
+	`mis_a_jour_par` INTEGER,
 	`created_at` DATETIME,
 	`updated_at` DATETIME,
 	PRIMARY KEY (`id`),
@@ -51,8 +51,8 @@ CREATE TABLE `association`
 	`nom` VARCHAR(120)  NOT NULL,
 	`description` VARCHAR(255),
 	`site_web` VARCHAR(255),
-	`enregistre_par` INTEGER  NOT NULL,
-	`mis_a_jour_par` INTEGER  NOT NULL,
+	`enregistre_par` INTEGER,
+	`mis_a_jour_par` INTEGER,
 	`created_at` DATETIME,
 	`updated_at` DATETIME,
 	PRIMARY KEY (`id`),
@@ -262,11 +262,12 @@ CREATE TABLE `membre`
 	`tel_portable` VARCHAR(16),
 	`actif` TINYINT default 1,
 	`association_id` INTEGER  NOT NULL,
-	`enregistre_par` INTEGER  NOT NULL,
-	`mis_a_jour_par` INTEGER  NOT NULL,
+	`enregistre_par` INTEGER,
+	`mis_a_jour_par` INTEGER,
 	`created_at` DATETIME,
 	`updated_at` DATETIME,
 	PRIMARY KEY (`id`),
+	UNIQUE KEY `membre_U_1` (`pseudo`),
 	INDEX `membre_FI_1` (`statut_id`),
 	CONSTRAINT `membre_FK_1`
 		FOREIGN KEY (`statut_id`)
@@ -350,8 +351,8 @@ CREATE TABLE `statut`
 	`nom` VARCHAR(255)  NOT NULL,
 	`association_id` INTEGER  NOT NULL,
 	`actif` TINYINT default 1,
-	`enregistre_par` INTEGER  NOT NULL,
-	`mis_a_jour_par` INTEGER  NOT NULL,
+	`enregistre_par` INTEGER,
+	`mis_a_jour_par` INTEGER,
 	`created_at` DATETIME,
 	`updated_at` DATETIME,
 	PRIMARY KEY (`id`),
